Add cookie option to custom llm provider

--- a/src/main/resources/messages/AutoDevBundle.properties
+++ b/src/main/resources/messages/AutoDevBundle.properties
@@ -57,6 +57,7 @@ settings.gitLabTokenParam=Gitlab token
 settings.gitHubTokenParam=GitHub token
 settings.maxTokenLengthParam=Max token length
 settings.customEngineServerParam=Custom Engine Server
+settings.customEngineCookieParam=Custom Engine Cookie
 settings.customAIKeyParam=Custom AI Engine Key
 settings.aiEngineParam=AI Engine
 settings.xingHuoApiKeyParam=XingHuo API Key
